# IPES6

./: .gitignore  CLAUDE.md  CONTINUAR_MAÑANA.md  DEPLOY_CHECKLIST.md  DEPLOY_QUICK.md  IPES6.code-workspace  README.md  alumnos_import.csv  detectar_errores_utf8.py  docentes.csv  filtblock.txt  filtblock2.txt  global.d.ts  numbered.txt  package-lock.json  plan_2026.csv  temp_snip.txt  tmpPrev.txt  tmp_insc_block.txt
backend/: .dockerignore  .env.docker.example  .env.example  .gitignore  DEPLOY_LINUX.md  Dockerfile  ENV_TEMPLATE.md  Original.env  alumnos_debug.csv  alumnos_import.csv  analisis_proyecto.md  carga_alumnos_v2.py  conftest.py  createsuperuser.cmd  db_local.sqlite3  debug_trayectoria.py  dev.cmd  docentes_check_list.txt  docker-compose.yml  fix_data_feb05.py  fix_data_safe.py  link_preinscriptions.py  load_primaria_correlatives.py  manage.py  merge_docentes.py  migrate.cmd  patch_auth_api.py  plan_trabajo_correlativas.md  profesorados_resp.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  runserver.err  tablas_backup.sql  test_all_enrollment_output.txt  test_enrollment_errors_output.txt  test_enrollment_output.txt  test_mesas_libre_output.txt  test_mgmt_output.txt  (+5 more)
backend/.venv_host/: pyvenv.cfg
backend/apps/: debug_sync.py  deep_clean_json.py  final_sync.py  fix_folios.py  health_api.py  investigate_mesas.py  investigate_relations.py
backend/config/: api.py.example  asgi.py  settings.py  settings_test.py  urls.py  urls.py.SNIPPET.txt  wsgi.py
backend/core/: admin.py  api.py  api_root.py  auth_api.py  auth_ninja.py  auth_schemas.py  diagnostico_p1.py  diagnostico_p2.py  libre_config.py  middleware.py  models.py  permissions.py  schemas.py  views.py
backend/scripts/: audit_database.py  clean_partial_acta.py  fix_duplicate_docentes.py  fix_missing_preinscriptions.py  fix_notas_bug.py  get_student_stats.py  investigate_mesas.py  report_alumnos.py  show_logs.py  (+1 more)
(+868 files in other folders)
